--- a/style.css
+++ b/style.css
@@ -37,3 +37,16 @@ body {
 .navbar-links li a:hover {
     background-color:#555;
 }
+.container {
+    background-color: black;
+    width: 80vw;
+    max-width:37.5em;
+    padding: 3em 2.5em;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border: radius0.62em;
+    box-shadow: 01.25em 1.8em;
+
+}
