--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
 body {
     margin:0;
     padding:0;
-    
+    background-color: blueviolet;
 }
 
 .navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: blueviolet;
     color:white;
 }
 .nav-title{
@@ -35,12 +35,13 @@ body {
     display: block;
 }
 .navbar-links li a:hover {
-    background-color:grey;
+    background-color:blue;
 }
 .container {
-    background-color: black;
+    background-color: blue
+    ;
     width: 80vw;
-    max-width:37.5em;
+    max-width:34.5em;
     padding: 3em 2.5em;
     position: absolute;
     transform: translate(-50%,-50%);
@@ -48,6 +49,7 @@ body {
     left: 50%;
     border: radius0.62em;
     box-shadow: 01.25em 1.8em;
+    max-height: 34.5em;
 
 }
 .search-wrapper{
@@ -59,7 +61,42 @@ body {
 .search-wrapper button{
     font-size:1em ;
     background-color: white;
-    color:black;
+    color:blue;
     padding:0.8em 0;
     border:none;
 }
+#result{
+    margin-top: 1.25em;
+}
+.container .flag-img {
+    display: block;
+    width: 45%;
+    min-width: 7.5em;
+    margin: 1.8em auto 1.2em auto;
+  }
+  .container h2 {
+    font-weight: 600;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 1.8em;
+  }
+  .data-wrapper {
+    margin-bottom: 1em;
+    letter-spacing: 0.3px;
+  }
+  .container h4 {
+    display: inline;
+    font-weight: 500;
+    color: white;
+  }
+  .container span {
+    color: black;
+  }
+  .container h3 {
+    text-align: center;
+    font-size: 1.2em;
+    font-weight: 400;
+    color: white;
+  }
