--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: pink;
-    color:white;
+    background-color: blueviolet;
+    color:red;
 }
 .nav-title{
     font-size: 1.5rem;
